apps/directus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
  namespace: directus
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: directus
    spec:
      containers:
        - name: directus
          image: directus/directus:11.17.2
          ports:
            - containerPort: 8055
          startupProbe:
            httpGet:
              path: /server/health
              port: 8055
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /server/health
              port: 8055
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /server/health
              port: 8055
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
