apps/directus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus
  namespace: directus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: directus.vdemirev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directus
                port:
                  number: 8055
  tls:
    - hosts:
        - directus.vdemirev.com
      secretName: directus-tls
